--- a/Base.Master
+++ b/Base.Master
@@ -28,21 +28,24 @@
               <li style="width: 150px;"><a href="/CategoryPage/CategoryPage.aspx?category_id=4">Stationery</a></li>
             </ul>
           </li>
-
+             </ul>
           <div id="register&login">
+            <ul>
             <li style="float: right; width: 100px;">
-              <a href="Register&Login/Register&Login.jsp" onclick="changeArea()">
+              <a href="../LoginPage/Login.aspx" onclick="changeArea()">
                 Login
               </a>
             </li>
             <li style="float: right; width: 100px;">
-              <a href="Register&Login/Register&Login.jsp">
+              <a href="../RegisterPage/Register.aspx">
                 Register
               </a>
             </li>
+                </ul>
           </div>
 
-          <div id="online&logout" style="display: none;" name="">
+          <div id="online&logout" style="display: none;">
+              <ul>
             <li style="float: right; width: 100px;">
               <a href="Register&Login/logout_action.jsp">
                 Logout
@@ -53,8 +56,9 @@
                 Account
               </a>
             </li>
+              </ul>
           </div>
-        </ul>
+       
       </div>
     </div>
 
