--- a/PersonalPage/PersonalPage.css
+++ b/PersonalPage/PersonalPage.css
@@ -106,6 +106,7 @@ html {
 #ContentPlaceHolder1_contact_info {
     padding-top: 3px;
     padding-left: 5px;
+    padding-bottom: 20px;
     margin-bottom: 20px;
     margin-left: 144px;
     resize: none;
@@ -147,7 +148,6 @@ html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-// haven't update
 
 #posts_container{
     width: 920px;
@@ -164,9 +164,10 @@ html {
     font-weight: 900;
     font-size: 1.5em;
     text-shadow: 1px 1px 2px darkgray;
+    text-align: left;
 }
 
-#posts_container #add_post{
+#posts_container #ContentPlaceHolder1_add_post {
     cursor: pointer;
     float: right;
     padding: 5px;
@@ -234,14 +235,12 @@ html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.delete_buttons, .remove_buttons{
-    cursor: pointer;
+.delete_buttons{
     float: right;
     margin: 5px;
     margin-top: 30px;
     border-radius: 3px;
     border: none;
-    background: none;
     width: 30px;
     height: 30px;
     font-size: 16px;
